[gd_scene load_steps=3 format=3 uid="uid://cjpssyc1gqfku"]

[ext_resource type="Script" path="res://scenes/UI/upgrade_card.gd" id="1_82vuh"]
[ext_resource type="Theme" uid="uid://xdse31n3ef74" path="res://StellaraTheme.tres" id="1_graix"]

[node name="Upgrade_card" type="MarginContainer"]
custom_minimum_size = Vector2(300, 300)
offset_right = 200.0
offset_bottom = 300.0
mouse_filter = 2
theme = ExtResource("1_graix")
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_82vuh")

[node name="PanelContainer" type="Button" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(250, 300)
layout_mode = 2
theme = ExtResource("1_graix")
theme_type_variation = &"FlatButton"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(225, 275)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -137.5
offset_right = 112.5
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Name_label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("1_graix")
text = "name"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Level_label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("1_graix")
text = "level"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Description_label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme = ExtResource("1_graix")
theme_override_font_sizes/font_size = 15
text = "description"
horizontal_alignment = 1
autowrap_mode = 2
